--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -7,21 +7,98 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1 >Impressum</h1>
+    <h2><b>Unternehmen</b></h2>
     <mat-list>
-      <div mat-subheader class="test">Unternehmen</div>
       <mat-list-item *ngFor="let folder of folders">
         <mat-icon matListItemIcon>info</mat-icon>
         <div matListItemTitle>{{folder.name}}</div>
         <div matListItemLine>{{folder.beschreibung}}</div>
       </mat-list-item>
       <mat-divider></mat-divider>
-      <div mat-subheader class="test">Datenschutz</div>
-      <mat-list-item *ngFor="let note of notes">
-        <mat-icon matListItemIcon>fingerprint</mat-icon>
-        <div matListItemTitle>{{note.name}}</div>
-        <div matListItemLine>{{note.beschreibung}}</div>
-      </mat-list-item>
     </mat-list>
+    <h2><b>Datenschutz</b></h2>
+    <b>Es werden nur die für uns relevanten Daten gesammelt</b>
+    <p>Daten die für den Ticketkauf und dessen validieren notwendig sind</p>
+
+    <b>Third Parties Anbieter</b>
+    <p>Wir arbeiten nicht mit Third Parties Anbieter zusammen.</p>
+
+    <b>Daten löschen</b>
+    <p>Sie können alle Daten, die wir über sie haben, löschen lasssen</p>
+  <mat-list>
+    <mat-divider></mat-divider>
+  </mat-list>
+    <h2><b>Datenschutzerklärung</b></h2>
+    <b>Grundlegendes</b>
+    <p>Diese Datenschutzerklärung soll die Nutzer dieser Website über die Art, den Umfang und den Zweck der Erhebung und Verwendung personenbezogener Daten durch den Websitebetreiber Ticketero informieren.</p>
+    <p>Der Websitebetreiber nimmt Ihren Datenschutz sehr ernst und behandelt Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Vorschriften. Da durch neue Technologien und die ständige Weiterentwicklung dieser Webseite Änderungen an dieser Datenschutzerklärung vorgenommen werden können, empfehlen wir Ihnen sich die Datenschutzerklärung in regelmäßigen Abständen wieder durchzulesen.</p>
+    <p>Definitionen der verwendeten Begriffe (z.B. “personenbezogene Daten” oder “Verarbeitung”) finden Sie in Art. 4 DSGVO.</p>
+
+    <b>Zugriffsdaten</b>
+    <p>Wir, der Websitebetreiber bzw. Seitenprovider, erheben aufgrund unseres berechtigten Interesses (s. Art. 6 Abs. 1 lit. f. DSGVO) Daten über Zugriffe auf die Website und speichern diese als „Server-Logfiles“ auf dem Server der Website ab. Folgende Daten werden so protokolliert:</p>
+    <ul>
+      <li>Besuchte Website</li>
+      <li>Uhrzeit zum Zeitpunkt des Zugriffes </li>
+      <li>Menge der gesendeten Daten in Byte </li>
+      <li>Quelle/Verweis, von welchem Sie auf die Seite gelangten</li>
+      <li>Verwendeter Browser </li>
+      <li>Verwendetes Betriebssystem </li>
+      <li>Verwendete IP-Adresse</li>
+    </ul>
+    <p>Die Server-Logfiles werden für maximal 30 Tage gespeichert und anschließend gelöscht. Die Speicherung der Daten erfolgt aus Sicherheitsgründen, um z. B. Missbrauchsfälle aufklären zu können. Müssen Daten aus Beweisgründen aufgehoben werden, sind sie solange von der Löschung ausgenommen bis der Vorfall endgültig geklärt ist.</p>
+
+
+    <b>Reichweitenmessung & Cookies
+    </b>
+    <p>Diese Website verwendet Cookies zur pseudonymisierten Reichweitenmessung, die entweder von unserem Server oder dem Server Dritter an den Browser des Nutzers übertragen werden. Bei Cookies handelt es sich um kleine Dateien, welche auf Ihrem Endgerät gespeichert werden. Ihr Browser greift auf diese Dateien zu. Durch den Einsatz von Cookies erhöht sich die Benutzerfreundlichkeit und Sicherheit dieser Website. Falls Sie nicht möchten, dass Cookies zur Reichweitenmessung auf Ihrem Endgerät gespeichert werden, können Sie dem Einsatz dieser Dateien hier widersprechen:</p>
+  <p>
+    Cookie-Deaktivierungsseite der Netzwerkwerbeinitiative: http://optout.networkadvertising.org/?c=1#!/
+  </p>
+  <p>Cookie-Deaktivierungsseite der US-amerikanischen Website: http://optout.aboutads.info/?c=2#!/ </p>
+    <p>Cookie-Deaktivierungsseite der europäischen Website: http://optout.networkadvertising.org/?c=1#!/ </p>
+<p>Gängige Browser bieten die Einstellungsoption, Cookies nicht zuzulassen. Hinweis: Es ist nicht gewährleistet, dass Sie auf alle Funktionen dieser Website ohne Einschränkungen zugreifen können, wenn Sie entsprechende Einstellungen vornehmen.</p>
+
+    <b>Erfassung und Verarbeitung personenbezogener Daten    </b>
+    <p>Der Websitebetreiber erhebt, nutzt und gibt Ihre personenbezogenen Daten nur dann weiter, wenn dies im gesetzlichen Rahmen erlaubt ist oder Sie in die Datenerhebung einwilligen. Als personenbezogene Daten gelten sämtliche Informationen, welche dazu dienen, Ihre Person zu bestimmen und welche zu Ihnen zurückverfolgt werden können – also beispielsweise Ihr Name, Ihre E-Mail-Adresse und Telefonnummer.</p>
+    <p>Diese Website können Sie auch besuchen, ohne Angaben zu Ihrer Person zu machen. Zur Verbesserung unseres Online-Angebotes speichern wir jedoch (ohne Personenbezug) Ihre Zugriffsdaten auf diese Website. Zu diesen Zugriffsdaten gehören z. B. die von Ihnen angeforderte Datei oder der Name Ihres Internet-Providers. Durch die Anonymisierung der Daten sind Rückschlüsse auf Ihre Person nicht möglich.</p>
+    <p>Wir verarbeiten personenbezogene Daten wie Vorname, Nachname, Geburtsdatum, E-Mail-Adresse und Angaben aus Kontaktformularen und Bestellungen. Die Daten werden nur nach ausdrücklicher Erlaubnis der betreffenden Nutzer und unter Einhaltung der geltenden Datenschutzbestimmungen verarbeitet. Die Verarbeitung der personenbezogenen Daten erfolgt aufgrund unseres berechtigten Interesses zur Erfüllung unserer vertraglich vereinbarten Leistungen und zur Optimierung unseres Online-Angebotes.</p>
+
+    <b>Umgang mit Kontaktdaten</b>
+    <p>Nehmen Sie mit uns als Websitebetreiber durch die angebotenen Kontaktmöglichkeiten Verbindung auf, werden Ihre Angaben gespeichert, damit auf diese zur Bearbeitung und Beantwortung Ihrer Anfrage zurückgegriffen werden kann. Ohne Ihre Einwilligung werden diese Daten nicht an Dritte weitergegeben.</p>
+
+    <b>Nutzung von Social-Media-Plugins von Facebook</b>
+    <p>Aufgrund unseres berechtigten Interesses an der Analyse, Optimierung und dem Betrieb unseres Online-Angebotes (im Sinne des Art. 6 Abs. 1 lit. f. DSGVO), verwendet diese Website das Facebook-Social-Plugin, welches von der Facebook Inc. (1 Hacker Way, Menlo Park, California 94025, USA) betrieben wird. Erkennbar sind die Einbindungen an dem Facebook-Logo bzw. an den Begriffen „Like“, „Gefällt mir“, „Teilen“ in den Farben Facebooks (Blau und Weiß). Informationen zu allen Facebook-Plugins finden Sie über den folgenden Link: https://developers.facebook.com/docs/plugins/</p>
+    <p>Facebook Inc. hält das europäische Datenschutzrecht ein und ist unter dem Privacy-ShieldAbkommen zertifiziert: https://www.privacyshield.gov/participant?id=a2zt0000000GnywAAC&status=Active</p>
+    <p>Das Plugin stellt eine direkte Verbindung zwischen Ihrem Browser und den FacebookServern her. Der Websitebetreiber hat keinerlei Einfluss auf die Natur und den Umfang der Daten, welche das Plugin an die Server der Facebook Inc. übermittelt. Informationen dazu finden Sie hier: https://www.facebook.com/help/186325668085084
+      Das Plugin informiert die Facebook Inc. darüber, dass Sie als Nutzer diese Website besucht haben. Es besteht hierbei die Möglichkeit, dass Ihre IP-Adresse gespeichert wird. Sind Sie während des Besuchs auf dieser Website in Ihrem Facebook-Konto eingeloggt, werden die genannten Informationen mit diesem verknüpft.</p>
+    <p>Nutzen Sie die Funktionen des Plugins – etwa indem Sie einen Beitrag teilen oder „liken“ –, werden die entsprechenden Informationen ebenfalls an die Facebook Inc. übermittelt. Möchten Sie verhindern, dass die Facebook. Inc. diese Daten mit Ihrem Facebook-Konto verknüpft, loggen Sie sich bitte vor dem Besuch dieser Website bei Facebook aus und löschen Sie die gespeicherten Cookies. Über Ihr Facebook-Profil können Sie weitere Einstellungen zur Datenverarbeitung für Werbezwecke tätigen oder der Nutzung Ihrer Daten für Werbezwecke widersprechen. Zu den Einstellungen gelangen Sie hier:</p>
+    <ul>
+      <li>Profileinstellungen bei Facebook: https://www.facebook.com/ads/preferences/?entry_product=ad_settings_screen</li>
+      <li>Cookie-Deaktivierungsseite der US-amerikanischen Website: http://optout.aboutads.info/?c=2#!/</li>
+      <li>Cookie-Deaktivierungsseite der europäischen Website: http://optout.networkadvertising.org/?c=1#!/</li>
+    </ul>
+    <p>Welche Daten, zu welchem Zweck und in welchem Umfang Facebook Daten erhebt, nutzt und verarbeitet und welche Rechte sowie Einstellungsmöglichkeiten Sie zum Schutz Ihrer Privatsphäre haben, können Sie in den Datenschutzrichtlinien von Facebook nachlesen. Diese finden Sie hier: https://www.facebook.com/about/privacy/</p>
+
+
+    <b>Newsletter-Abonnement</b>
+    <p>Der Websitebetreiber bietet Ihnen einen Newsletter an, in welchem er Sie über aktuelle Geschehnisse und Angebote informiert. Möchten Sie den Newsletter abonnieren, müssen Sie eine valide E-Mail-Adresse angeben. Wenn Sie den Newsletter abonnieren, erklären Sie sich mit dem Newsletter-Empfang und den erläuterten Verfahren einverstanden.</p>
+    <p>Der Newsletterversand erfolgt durch den Versanddienstleister XY, einer Versandplattform des Anbieters ABC, Beispielstraße 5, 12345 Beispielstadt, Deutschland. Informationen über die Datenschutzbestimmungen des Versanddienstleisters erhalten Sie unter: beispielXY.de/datenschutz.</p>
+    <p>Widerruf und Kündigung: Ihre Einwilligung zum Erhalt des Newsletter können Sie jederzeit widerrufen und somit das Newsletter-Abonnement kündigen. Nach Ihrer Kündigung erfolgt die Löschung Ihre personenbezogenen Daten. Ihre Einwilligung in den Newsletterversand erlischt gleichzeitig. Am Ende jedes Newsletters finden Sie den Link zur Kündigung.</p>
+    <p>Inhalte des Newsletters stellen sich aus Angeboten der Ticketanbieter und Informationen der Plattform Ticketero zusammen.</p>
+    <p>Aufgrund unseres berechtigten Interesses zur Erfüllung unserer vertraglich vereinbarten Leistungen werden nutzerspezifische Daten beim Versanddienstleister pseudonymisiert. Die Daten werden nicht an Dritte weitergegeben. </p>
+
+    <b>Rechte des Nutzers</b>
+    <p>Sie haben als Nutzer das Recht, auf Antrag eine kostenlose Auskunft darüber zu erhalten, welche personenbezogenen Daten über Sie gespeichert wurden. Sie haben außerdem das Recht auf Berichtigung falscher Daten und auf die Verarbeitungseinschränkung oder Löschung Ihrer personenbezogenen Daten. Falls zutreffend, können Sie auch Ihr Recht auf Datenportabilität geltend machen. Sollten Sie annehmen, dass Ihre Daten unrechtmäßig verarbeitet wurden, können Sie eine Beschwerde bei der zuständigen Aufsichtsbehörde einreichen.</p>
+
+    <b>Löschung von Daten</b>
+    <p>Sofern Ihr Wunsch nicht mit einer gesetzlichen Pflicht zur Aufbewahrung von Daten (z. B. Vorratsdatenspeicherung) kollidiert, haben Sie ein Anrecht auf Löschung Ihrer Daten. Von uns gespeicherte Daten werden, sollten sie für ihre Zweckbestimmung nicht mehr vonnöten sein und es keine gesetzlichen Aufbewahrungsfristen geben, gelöscht. Falls eine Löschung nicht durchgeführt werden kann, da die Daten für zulässige gesetzliche Zwecke erforderlich sind, erfolgt eine Einschränkung der Datenverarbeitung. In diesem Fall werden die Daten gesperrt und nicht für andere Zwecke verarbeitet.</p>
+
+    <b>Widerspruchsrecht</b>
+    <p>Nutzer dieser Webseite können von ihrem Widerspruchsrecht Gebrauch machen und der Verarbeitung ihrer personenbezogenen Daten zu jeder Zeit widersprechen. Wenn Sie eine Berichtigung, Sperrung, Löschung oder Auskunft über die zu Ihrer Person gespeicherten personenbezogenen Daten wünschen oder Fragen bzgl. der Erhebung, Verarbeitung oder Verwendung Ihrer personenbezogenen Daten haben oder erteilte Einwilligungen widerrufen möchten, wenden Sie sich bitte an folgende E-Mail-Adresse: service@ticketero.com
+    </p>
+
+    <p>  Muster von www.datenschutz.org</p>
+
   </div>
   <div class="teil3"> </div>
 </section>
