--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -9,6 +9,8 @@
   background-color:rgba(255,255,255,.8);
   width:50%;
   padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 .teil2 h1 {
   font-size:55px;
@@ -17,6 +19,9 @@
   font-style:revert;
   font-weight:bold;
   padding-bottom: 40px;
+}
+b{
+padding-top: 2%;
 }
 html, body {
   height: auto;
