--- a/src/app/anmeldemaske/anmeldemaske.component.html
+++ b/src/app/anmeldemaske/anmeldemaske.component.html
@@ -23,14 +23,10 @@
       </mat-form-field>
         <button mat-raised-button color="primary" [disabled]="this.form.invalid" type="submit">Anmelden</button><br>
         <p>Noch keinen Account bei Ticketero? Einfach hier registrieren</p>
-        <button mat-raised-button color="primary" [routerLink]="['/registrieren']">Registrieren</button>
+        <button id="regi" mat-raised-button color="primary" [routerLink]="['/registrieren']">Registrieren</button>
   </form>
   </div>
   <div class="teil3"> </div>
-</section>
-<section class="hinweis">
-  <div class="teil1"></div>
-  <div class="teil3"></div>
 </section>
 </body>
 </html>
