--- a/src/app/bestaetigung/bestaetigung.component.html
+++ b/src/app/bestaetigung/bestaetigung.component.html
@@ -3,7 +3,7 @@
 <section class="bestaetigung">
   <div class="teil1"> </div>
   <div class="teil2">
-    <h1>Herzlichen Glückwunsch</h1>
+    <h1>Vielen Dank</h1>
     <h2> Dein Skipass wurde zu deinem Account hinzugefügt.</h2>
     <button mat-raised-button color="primary" [routerLink]="['/tickets']">Hiermit gelingst du zu deiner Tickets-Übersicht</button>
     <h2 id="info">Bitte überweisen Sie den ausgewählten Betrag auf folgendes Konto: </h2>
