--- a/src/app/bestaetigung/bestaetigung.component.scss
+++ b/src/app/bestaetigung/bestaetigung.component.scss
@@ -37,11 +37,13 @@ h2{
   display:flex;
 }
 
-.teil2 h1{
-  font-size: 55px;
-  font-style:revert;
-  font-weight:bold;
-  margin-bottom: 40px;
+.teil2 h1 {
+font-size:55px;
+text-align:center;
+margin-top:40px;
+font-style:revert;
+font-weight:bold;
+padding-bottom: 40px;
 }
 
 
